CMAKE_MINIMUM_REQUIRED(VERSION 3.5 FATAL_ERROR)

PROJECT(Cup.Object VERSION 2020.0505 LANGUAGES CXX)

ADD_LIBRARY(Cup.Object Source/Color.cpp Test/TestColor.cpp)

SET_TARGET_PROPERTIES(Cup.Object PROPERTIES CXX_STANDARD 17)

TARGET_INCLUDE_DIRECTORIES(Cup.Object PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Include/>
        $<INSTALL_INTERFACE:Include/>)

ADD_EXECUTABLE(TestColor Test/TestColor.cpp)
TARGET_LINK_LIBRARIES(TestColor PRIVATE Cup.Object)
