CMAKE_MINIMUM_REQUIRED(VERSION 3.5 FATAL_ERROR)

PROJECT(Cup.Graphics VERSION 2020.0505 LANGUAGES CXX)

ADD_LIBRARY(Cup.Graphics Source/Color.cpp Test/TestColor.cpp)

SET_TARGET_PROPERTIES(Cup.Graphics PROPERTIES CXX_STANDARD 17)

TARGET_INCLUDE_DIRECTORIES(Cup.Graphics PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Include/>
        $<INSTALL_INTERFACE:Include/>)

ADD_EXECUTABLE(TestColor Test/TestColor.cpp)
SET_TARGET_PROPERTIES(TestColor PROPERTIES CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(TestColor PRIVATE Cup.Graphics)
